2006-06-08  Johannes Schmid <jhs@cvs.gnome.org>

	* libanjuta/anjuta-launcher.c:
	Added debug message (see #343522)
	
	* plugins/build-basic-autotools/build-basic-autotools.c:
	Patch from Günther Brammer to fix #344015

	* plugins/sourceview/sourceview.c:
	Implemented IAnjutaEditor->get_begin/end_line_position (crashed
	automatic highlight of build messages)

2006-06-06 Naba Kumar <naba@gnome.org>

	* configure.in,
	libanjuta/interfaces/libanjuta.idl,
	manuals/reference/libanjuta/tmpl/ianjuta-debugger.sgml:
	plugins/Makefile.am,
	plugins/document-manager/action-callbacks.c,
	plugins/document-manager/plugin.c,
	plugins/editor/text_editor.c: Implemented IAnjutaEditorLanguage
	interface for language highlight selection and langauge change
	signal.
	
	* plugins/language-support-cpp-java: Added language support
	plugin for cpp and java.

2006-05-27  Naba Kumar  <naba@gnome.org>

	* libanjuta/interfaces/libanjuta.idl, plugins/gdb/*,
	plugins/debug-manager/*, data/Makefile.am,
	manuals/reference/libanjuta/libanjuta.types,
	manuals/reference/libanjuta/tmpl/ianjuta-debugger.sgml,
	manuals/reference/libanjuta/tmpl/libanjuta-unused.sgml:
	merged anjuta-new-debugger branch into trunck.
	(cvs -z3 up -j anjuta-merged-from-trunk-to-new-debugger -j anjuta-new-debugger)

2006-05-06 Sebastien Granjoux <seb.sfo@free.fr>
	
	* libanjuta/interfaces/libanjuta.idl,
	plugins/debug-manager/debugger.c,
	plugins/debug-manager/debugger.h,
	plugins/gdb/anjuta-gdb.plugin.in,
	plugins/gdb/debugger.c,
	plugins/gdb/debugger.h,
	plugins/gdb/plugin.c:
	Add new IAnjutaCpuDebugger interface to access cpu register
	Run gdb instead of /usr/local/bin/gdb
	
	* plugins/debug-manager/plugin.c,
	plugins/debug-manager/registers.c,
	plugins/debug-manager/registers.h:
	Rewrite register window
	Rename Load target menu item to Run target

2006-05-07  Naba Kumar  <naba@gnome.org>

	* plugins/gdb.init
	
2006-05-01 Sebastien Granjoux <seb.sfo@free.fr>

	* plugins/debug-manager/watch.c,